src/test/ui/rfc-1260/rustc_main_with_invalid_path.rs
#![feature(rustc_main)]
//~^ ERROR `main` function not found
#![rustc_main(alt_main)]
//~^ ERROR #[rustc_main] resolution failure
